  - Added option "-r INT" to randomize the goals with a given 64-bit seed before
    selection.
  - Added option "-y" for a dry run.
  - Renamed run_action to run in Mirabelle.action record. Minor INCOMPATIBILITY.
  - Run the actions on goals before commands "unfolding" and "using".

* Meson
  - Added support for polymorphic "using" facts. Minor INCOMPATIBILITY.



*** System ***

* Command-line tool "isabelle scala_project" supports Gradle as
alternative to Maven: either option -G or -M needs to be specified
explicitly. This increases the chances that the Java/Scala IDE project
works properly.



New in Isabelle2021-1 (December 2021)
-------------------------------------

*** General ***

* The Isabelle/Haskell library ($ISABELLE_HOME/src/Tools/Haskell) has
been significantly improved. In particular, module Isabelle.Bytes
provides type Bytes for light-weight byte strings (with optional UTF8
interpretation), similar to type string in Isabelle/ML. Isabelle symbols
now work uniformly in Isabelle/Haskell vs. Isabelle/ML vs.
Isabelle/Scala/PIDE.

* Configuration option "show_results" controls output of final results
in commands like 'definition' or 'theorem'. Output is normally enabled
in interactive mode, but it could occasionally cause unnecessary
slowdown. It can be disabled like this:

  context notes [[show_results = false]]
  begin
    definition "test = True"
    theorem test by (simp add: test_def)
  end

* Theory_Data / Generic_Data: "val extend = I" has been removed;
obsolete since Isabelle2021.

* More symbol definitions for the Z Notation (Isabelle fonts and LaTeX).
See also the group "Z Notation" in the Symbols dockable of
Isabelle/jEdit.


*** Isar ***

* Commands 'syntax' and 'no_syntax' now work in a local theory context,
but in contrast to 'notation' and 'no_notation' there is no proper way
to refer to local entities. Note that local syntax works well with
'bundle', e.g. see "lattice_syntax" vs. "no_lattice_syntax" in theory
Main of Isabelle/HOL.
